# Backend/src/main/kotlin/com/cgm/spring_kotlin_bowling/jsonApiModels/AttributesFrame.kt
@@ -1,9 +1,0 @@
-package com.cgm.spring_kotlin_bowling.jsonApiModels
-
-class AttributesFrame {
-    var shot1: Int? = null
-    var shot2: Int? = null
-    var shot3: Int? = null
-    var flag: String = ""
-    var localScore: Int? = null
-}
