# Backend/src/main/kotlin/com/cgm/spring_kotlin_bowling/jsonApiModels/DataError.kt
@@ -1,5 +1,0 @@
-package com.cgm.spring_kotlin_bowling.jsonApiModels
-
-class DataError {
-    var attributes = AttributesError()
-}
