# Backend/src/main/kotlin/com/cgm/spring_kotlin_bowling/jsonApiModels/DataFrame.kt
@@ -1,8 +1,0 @@
-package com.cgm.spring_kotlin_bowling.jsonApiModels
-
-
-class DataFrame {
-    var id: String = "0"
-    val type = "Frame"
-    var attributes = com.cgm.spring_kotlin_bowling.jsonApiModels.AttributesFrame()
-}
