# Backend/src/main/kotlin/com/cgm/spring_kotlin_bowling/jsonApiModels/DataRoll.kt
@@ -1,5 +1,0 @@
-package com.cgm.spring_kotlin_bowling.jsonApiModels
-
-class DataRoll {
-    var attributes = com.cgm.spring_kotlin_bowling.jsonApiModels.AttributesRoll()
-}
