# Backend/src/main/kotlin/com/cgm/spring_kotlin_bowling/server_reponses/responses.kt
@@ -1,17 +1,16 @@
 package com.cgm.spring_kotlin_bowling.server_reponses
 
-import com.cgm.spring_kotlin_bowling.jsonApiModels.ErrorTemplate
-import com.cgm.spring_kotlin_bowling.jsonApiModels.FrameJson
-import com.cgm.spring_kotlin_bowling.jsonApiModels.Roll
-import com.cgm.spring_kotlin_bowling.jsonApiModels.Scoreboard
+import com.cgm.spring_kotlin_bowling.jsonApiModels.*
 import org.springframework.http.HttpHeaders
 import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 
-fun negativeFrameFetchingResponse(id: String) =
-    buildResponse(HttpStatus.NOT_FOUND,"404", "404 NOT FOUND: frame with ID $id not found")
+private typealias JsonApiError = Error
 
-fun positiveFrameFetchingResponse(frameJson: FrameJson, id: String): ResponseEntity<Any> {
+fun negativeFrameFetchingResponse(id: String) =
+    buildResponse(HttpStatus.NOT_FOUND, "404", "404 NOT FOUND: frame with ID $id not found")
+
+fun positiveFrameFetchingResponse(frameJson: Frame, id: String): ResponseEntity<Any> {
     val httpHeaders = HttpHeaders()
     httpHeaders.add("description", "200 OK: frame with ID $id correctly fetched")
     return ResponseEntity.status(HttpStatus.OK).headers(httpHeaders).body(frameJson)
@@ -32,9 +31,15 @@ fun positiveScoreboardDeletionResponse(): ResponseEntity<Any> {
 private fun buildResponse400(description: String) =
     buildResponse(HttpStatus.BAD_REQUEST, "400", description)
 
-private fun buildResponse(status: HttpStatus, code: String, description: String): ResponseEntity<Any> {
-    val httpHeaders = HttpHeaders()
-    val errorTemplate = ErrorTemplate()
+private fun buildResponse(
+    status: HttpStatus,
+    code: String,
+    description: String,
+    httpHeaders: HttpHeaders = HttpHeaders()
+): ResponseEntity<Any> {
+    val errorTemplate = JsonApiError()
+    errorTemplate.data = ErrorData()
+    errorTemplate.data.attributes = ErrorDataAttributes()
     errorTemplate.data.attributes.code = code
     errorTemplate.data.attributes.description = description
     return ResponseEntity.status(status).headers(httpHeaders).body(errorTemplate)
@@ -72,10 +77,7 @@ fun gameEndsReponse(): ResponseEntity<Any> =
 fun apiNotImplementedResponse(): ResponseEntity<Any> {
     val httpHeaders = HttpHeaders()
     httpHeaders.add("description", " API not implemented")
-    val errorTemplate = ErrorTemplate()
-    errorTemplate.data.attributes.code = "500"
-    errorTemplate.data.attributes.description = "500 API NOT IMPLEMENTED"
-    return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).headers(httpHeaders).body(errorTemplate)
+    return buildResponse(HttpStatus.INTERNAL_SERVER_ERROR, "500",  "500 API NOT IMPLEMENTED", httpHeaders)
 }
 
 //fun positiveFrameCreationResponse(frameJson: FrameJson) : ResponseEntity<Any> {
